FLa4a NEWS
CHANGES IN FLa4a 0.900.x:

	NEW FEATURES:
		wireframe for FLQuant
		plot fits vs observation improved (yaxis removed)
		new vignette for introduction
		new vignette for growth modelling
		new vignette for natural mortality modelling
		new vignette for stock assessment
		new themes for residual plots
		default model in sca changed from if (ka < 3) ka else min(max(3, floor(.5 * ka)), 6) to if (ka < 3) ka else min(max(3, floor(.66 * ka)), 10), adding more degress of freedom. It has been noticed that age tends to be modelled with a reduced number of ks. 
	BUG FIXES:
		man pages reviewed

CHANGES IN FLa4a 0.800.x:

	NEW FEATURES:
		
	BUG FIXES:
		a4aInternal to remove files after a4a ADMB run

CHANGES IN FLa4a 0.700.x:

	NEW FEATURES:
		
	BUG FIXES:
		a4aInternal was calling check.executable() which isn't needed and was making a mess in parallel
		sr geomean fixed, it was failing due to including par "b" in outcome while admb was not reporting.
		R~ssb was using the previous year to compute SSB, now it matches the SSB with the correct yearclass.
		Biomass age ranges for fitting biomass indices was not computed properly, was using position instead of real ages.
		MCMC with hybrid method was not working due to mcsave wrongly set, must be 1.

CHANGES IN FLa4a 0.600.x:

	NEW FEATURES:
		MCMC fits, including tests
		a4a tpl copy method
		coda coercing
		
	BUG FIXES:

CHANGES IN FLa4a 0.500.x:

	NEW FEATURES:
		plots for residuals, fitted and observed changed to a gray theme and visuals updated.
		plot for residuals uses latticeExtra if present to plot the names of the fleets in the left side strip.
		plot for residuals includes aggregated catch in weight. 
		fitSumm includes a flag on convergence, 0 for true and 1 for false, to be inline with optim, although 1 doesn't mean the iters were finished just that it didn't converge. Tests updated.