@@ -9,11 +9,10 @@
 \usage{
 a4aSCA(stock, indices, ...)
 
-\S4method{a4aSCA}{FLStock,FLIndices}(stock, indices, fmodel = ~s(age, k = 3) +
-  factor(year), qmodel = lapply(seq(length(indices)), function(i) ~1),
-  srmodel = ~factor(year), n1model = ~factor(age), vmodel = missing,
-  covar = missing, wkdir = missing, verbose = FALSE, fit = "assessment",
-  center = TRUE, mcmc = missing)
+\S4method{a4aSCA}{FLStock,FLIndices}(stock, indices, fmodel, qmodel,
+  srmodel = ~factor(year), n1model, vmodel, covar = missing,
+  wkdir = missing, verbose = FALSE, fit = "assessment", center = TRUE,
+  mcmc = missing)
 }
 \arguments{
 \item{stock}{an \code{FLStock} object containing catch and stock information}
@@ -32,23 +31,26 @@ a4aSCA(stock, indices, ...)
 
 \item{vmodel}{a list of formula objects depicting the model for the variance of fishing mortality and the indices}
 
-\item{covar}{a list with covariates}
+\item{covar}{a list with covariates to be used by the submodels. The formula must have an element with the same name as the list element.}
 
-\item{wkdir}{used to set a working directory for the admb optimiser; if wkdir is set, all admb files are saved to this folder, otherwise they are deleted}
+\item{wkdir}{used to set a working directory for the admb optimiser; if wkdir is set, all admb files are saved to this folder, otherwise they are deleted.}
 
-\item{verbose}{if true, admb fitting information is printed to the screen}
+\item{verbose}{if true, admb fitting information is printed to the screen.}
 
 \item{fit}{character with type of fit: 'MP' or 'assessment'; the former does not require the hessian to be computed, while the latter does.}
 
-\item{center}{logical defining if the data should be centered before fitting}
+\item{center, }{logical defining if the data should be centered before fitting.}
 
-\item{mcmc}{a \code{SCAMCMC} object with the arguments to run MCMC}
+\item{mcmc}{an \code{SCAMCMC} object with the arguments to run MCMC}
 }
 \value{
 an \code{a4aFit} object if fit is "MP" or an \code{a4aFitSA} object if fit is "assessment"
 }
 \description{
 Advanced user interface to the statistical catch-at-age method of the a4a stock assessment framework.
+}
+\details{
+This method is the advanced method for stock assessment, it gives the user access to a set of arguments that the \code{sca} method doesn't. In particular, the default for the \code{fit} argument is 'assessment'. For detailed information about using the \code{sca} read the vignette 'The a4a Stock Assessment Modelling Framework' (\code{vignette('sca')}).
 }
 \examples{
 data(ple4)
